--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: "Poppins", Aerial , serif, monospace, fantasy;
+        font-family: "Poppins", Ariel , serif, monospace, fantasy;
       }
       body {
         width: 100vw;
