--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 body {
   width: 100vw;
-  background-color: #fff;
+  background-color: rgb(222, 202, 202);
   height: 100vh;
   display: grid;
   place-items: center;
